S3 프로필 이미지 컬럼을 key 저장으로 전환 및, 프로필 이미지 업로드API
